removed new pathnames. need to work on that as well

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ecommerce_site",
-  "homepage": "http://mardotquis.github.io/DuragsRUs",
+  "homepage": "duragsrus.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
