added CNAME file

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ecommerce_site",
-  "homepage": "duragsrus.com",
+  "homepage": "https://github.com/Mardotquis/DuragsRUs/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
