--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "auth0-js": "^9.8.0",
     "axios": "^0.18.0",
+    "dotenv": "^6.1.0",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-router-dom": "^4.3.1",
